--- a/resources/scss/partials/_header.scss
+++ b/resources/scss/partials/_header.scss
@@ -17,12 +17,12 @@ nav img{
 }
 .nav-link {
     padding: 0.5rem 1rem;
-    color: black;
-    text-decoration: none;
-
     &:hover{
     color: blue;
-    text-decoration: underline;
-}
 
+   }
+}
+a {
+    color: black;
+    text-decoration: none;
 }
